# InfraMind

./: .env.example  .gitignore  AUTOMATION_SUMMARY.md  CONTRIBUTING.md  GITHUB_DEPLOYMENT_GUIDE.md  PHASE1_COMPLETE.md  PRODUCTION_READY.md  PRODUCTION_READY_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.txt  README.md  RELEASE_AUTOMATION.md  RELEASE_v0.1.0.md  TESTING.md  WHERE_WE_ARE.md  docker-compose.prod.yml  docker-compose.yml  install.sh  test.sh
.claude/: settings.local.json
.github/: COMMIT_CONVENTION.md  commitlint.config.js
.github/workflows/: ci.yml  deploy.yml  release.yml  validate-pr.yml
agents/cpp_agent/: CMakeLists.txt  Dockerfile
agents/cpp_agent/config/: agent.yaml
agents/cpp_agent/include/: agent.hpp
agents/cpp_agent/include/collectors/: cache_collector.hpp  collector.hpp  cpu_collector.hpp  io_collector.hpp  mem_collector.hpp
agents/cpp_agent/include/exporters/: exporter.hpp  logging.hpp  prometheus.hpp
agents/cpp_agent/src/: agent.cpp  main.cpp
agents/cpp_agent/src/collectors/: cache_collector.cpp  cpu_collector.cpp  io_collector.cpp  mem_collector.cpp
agents/cpp_agent/src/exporters/: logging.cpp  prometheus.cpp
cli/: README.md  pyproject.toml  setup.py
deploy/k8s/: agent-daemonset.yaml  api-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  redis-statefulset.yaml
docs/: PYPI_SETUP.md  api.md  architecture.md  benefits.md  diagrams.md  getting-started.md  ml.md  quickstart.md
docs/archive/: PRE_RELEASE_CHECKLIST.md  PROJECT_SUMMARY.md  READY_FOR_PRODUCTION.md  TEST_RESULTS.md  next-steps.md
docs/deployment/: checklist.md  production.md
docs/integration/: README.md  github-actions.md  gitlab-ci.md  jenkins.md
docs/reference/: ports.md
docs/releases/: RELEASE_PROCESS.md
examples/: Jenkinsfile
examples/demo_project/: CMakeLists.txt
examples/demo_project/src/: main.cpp
k8s/: README.md  agent-daemonset.yaml  api-deployment.yaml  ingress.yaml  minio-deployment.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.example.yaml  secrets.yaml.example
observability/: prometheus.yml
observability/grafana_dashboards/: dashboards.yml  ml-performance.json  pipelines.json  (+1 more)
services/api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
services/api/app/: __init__.py  config.py  deps.py  main.py
services/api/app/middleware/: __init__.py  metrics.py  rate_limit.py
services/api/app/ml/: features.py  model_store.py  optimizer.py  trainer.py
services/api/app/models/: __init__.py  orm.py  schemas.py
services/api/app/routers/: builds.py  features.py  health.py  optimize.py  runs.py
services/api/app/scripts/: seed_demo.py
services/api/app/storage/: postgres.py  redis.py
services/api/tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_optimizer.py
(+4 files in other folders)
